# rust-website

./: .env.example  .gitignore  Cargo.toml  OVERVIEW.md  README.md  dev.sh  instructions.txt
backend/: .env.example  Cargo.toml  OVERVIEW.md  README.md  data.db
backend/assets/: login.html
backend/assets/admin/: 168.681b2573.async.js  200.0da05925.async.js  30.7d19f306.async.js  403.6e86278d.async.js  474.b7e6b738.async.js  574.01d3cf1f.async.js  650.308d795a.async.js  652.763cee09.async.js  674.58abc147.async.js  757.038a1879.async.js  839.7d82c3e5.async.js  880.315e75ea.async.js  89.1ff37f53.async.js  930.eb47d88b.async.js  index.html  login.html  p__404.12f08e79.async.js  p__Dashboard.f69c23e1.async.js  p__User__Login__index.e705eea6.async.js  p__composite-table__$create.f2663597.async.js  p__composite-table__$table.b3c2fd82.async.js  p__composite-table__$update.6093a79b.async.js  p__composite-table__$view.15333b33.async.js  p__composite-table__index.6b30c026.async.js  p__table__$create.88d705f8.async.js  p__table__$table.2bb55c36.async.js  p__table__$update.108c9388.async.js  p__table__$view.69a68e5b.async.js  p__table__index.b9f076ce.async.js  preload_helper.ace83bf2.js  t__plugin-layout__Layout.a7bf7db8.async.js  umi.260a4b0c.css  umi.e69f839f.js
backend/assets/admin/scripts/: loading.js
backend/migrations/: 001_create_users.sql
backend/pro_admin/: config.toml
backend/pro_admin/raw_tables/: blogs.toml  users.toml
backend/src/: config.rs  error.rs  errors.rs  lib.rs  main.rs  routes.rs  utils.rs
backend/src/admin/: login.rs  mod.rs
backend/src/api/: routes.rs
backend/src/api/handlers/: auth.rs  blogs.rs  mod.rs
backend/src/auth/: mod.rs
backend/src/database/: connection.rs
backend/src/entities/: blog_views.rs  blogs.rs  mod.rs  users.rs
backend/src/graphql/: schema.rs
backend/src/handlers/: health.rs  mod.rs  user.rs
backend/src/migration/: m20240101_000001_initial.rs  m20250830_000002_create_blogs.rs  m20250830_000003_create_blog_views.rs  mod.rs
backend/src/models/: user.rs
backend/src/repositories/: user_repository.rs
backend/src/services/: user_service.rs
backend/tests/: integration_tests.rs
backend/tests/common/: mod.rs
frontend/: .gitignore  Cargo.toml  OVERVIEW.md  README.md  Trunk.toml  index.html  package.json  styles.css  tailwind.config.js
frontend/src/: app_routes.rs  config.rs  lib.rs  main.rs  routes.rs  utils.rs
frontend/src/components/: button.rs  footer.rs  form.rs  header.rs  mod.rs  user_form.rs  user_list.rs  user_row.rs
frontend/src/hooks/: mod.rs  use_users.rs
frontend/src/models/: user.rs
frontend/src/pages/: blog_detail.rs  blogs_list.rs  health.rs  landing.rs  mod.rs  not_found.rs
frontend/src/services/: api.rs  blogs.rs  health.rs  mod.rs  storage.rs
