[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Yew framework and WebAssembly
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

# HTTP client
gloo-net = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
